changed divs and classes

--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
         <title>Google</title>
     </head>
 <body>
- <div class="navbar">
-     <ul class="navbar items">
+ <div class="navbar_left">
+     <ul class="navbar_left">
          <li><a href="#" class="navbar_about"></a>About</li>
          <li><a href="#" class="navbar_store"></a>Store</li>
+</ul>
+</div>
+<div class="navbar_right">
+<ul class="navbar_right">
          <li><a href="#" class="navbar_gmail"></a>Gmail</li>
          <li><a href="#" class="navbar_images"></a>Images</li>
      </ul>
- </div>
- <div class="container">
+     </div>
+     <div class="google_logo">
      <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="logo">
      <div class="searchbox">
          <input class="searchbox" type="text">
