--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Google</title>
         <meta charset="UTF-8" font-family="arial, sans-serif">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="css/style.css" type="text/css" media="all">
+        <link rel="stylesheet" href="style.css" type="text/css" media="all">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       </head>
       
