--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" font-family="arial, sans-serif">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="style.css" type="text/css" media="all">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" media="all">
       </head>
       
       <body>
